; ModuleID = '/home/carl/AnghaBench/tengine/src/core/extr_nginx.c_ngx_cleanup_environment.c'
source_filename = "/home/carl/AnghaBench/tengine/src/core/extr_nginx.c_ngx_cleanup_environment.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@environ = common dso_local global i8** null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @ngx_cleanup_environment to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ngx_cleanup_environment(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8**, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = bitcast i8* %4 to i8**
  store i8** %5, i8*** %3, align 8
  %6 = load i8**, i8*** @environ, align 8
  %7 = load i8**, i8*** %3, align 8
  %8 = icmp eq i8** %6, %7
  br i1 %8, label %9, label %10

9:                                                ; preds = %1
  br label %13

10:                                               ; preds = %1
  %11 = load i8**, i8*** %3, align 8
  %12 = call i32 @ngx_free(i8** %11)
  br label %13

13:                                               ; preds = %10, %9
  ret void
}

declare dso_local i32 @ngx_free(i8**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
